<resources>
    <string name="app_name">campus-assistance-frontend</string>
    <string name="campus_assistance">校园助手</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="no_desc">no desc</string>
    <string name="homepage">首页</string>
    <string name="notification">通知</string>
    <string name="me">我</string>
    <string name="example">江西理工大学</string>
    <string name="holiday">请假</string>
    <string name="campus_report">校园上报</string>
    <string name="dormitory_repair">宿舍报修</string>
    <string name="announcement">公告</string>
    <string name="symbol1">/</string>
    <string name="dynamic">动态</string>
    <string name="system_announcement">系统公告</string>
    <string name="campus_announcement">校园公告</string>
    <string name="loading">Loading...</string>
    <string name="date_example">2024-06-03</string>
    <string name="read">阅读量：</string>
    <string name="number_example">64</string>
    <string name="my_created">我创建的</string>
    <string name="category">分类：</string>
    <string name="edit">编辑</string>
    <string name="publish">发布</string>
    <string name="offline">下线</string>
    <string name="delete">删除</string>
    <string name="mine">我的</string>
    <string name="title">标题：</string>
    <string name="cover">封面：</string>
    <string name="content">正文：</string>
    <string name="save">保存</string>
    <string name="author">作者：</string>
    <string name="status">当前状态：</string>
    <string name="symbol2">~</string>
    <string name="holiday_time">请假时间：</string>
    <string name="add_holiday">新增请假流程</string>
    <string name="holiday_type">请假类型：</string>
    <string name="holiday_reason">请假原因：</string>
    <string name="please_choose">请选择</string>
    <string name="begin_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="add">新增</string>
    <string name="location">当前地址：</string>
    <string name="please_location">点击定位</string>
    <string name="holiday_attachment">请假附件：</string>
    <string name="holiday_initiator">请假人：</string>
    <string name="holiday_department">所属部门：</string>
    <string name="comment">审批意见</string>
    <string name="holiday_destroy_time">销假时间：</string>
    <string name="holiday_create_time">申请时间：</string>
    <string name="holiday_destroy">销假</string>
    <string name="stage">流程信息</string>
    <string name="accept_time">接收时间：</string>
    <string name="finish_time">办结时间：</string>
    <string name="assignee">办理人：</string>
    <string name="duration">耗时：</string>
    <string name="process_detail">流程详情</string>
    <string name="agree">批准</string>
    <string name="reject">驳回</string>
    <string name="report">上报</string>
    <string name="my_assigned">我受理的</string>
    <string name="system_notification">系统通知</string>
    <string name="admin_notification">管理员通知</string>
    <string name="counselor_notification">辅导员通知</string>
    <string name="from">发送人：</string>
    <string name="send_time">发送时间</string>
    <string name="event_level">事项级别：</string>
    <string name="campus_report_desc">上报描述：</string>
    <string name="report_attachment">上报附件：</string>
    <string name="campus_report_location">上报地点：</string>
    <string name="campus_report_initiator">上报人：</string>
    <string name="campus_report_create_time">上报时间：</string>
    <string name="transact_content">办理内容：</string>
    <string name="transact_attachment">办理附件：</string>
    <string name="event_name">事项名称：</string>
    <string name="delegate">委派</string>
    <string name="handover">移交</string>
    <string name="transact">办理</string>
    <string name="add_campus_report">新增校园上报流程</string>
    <string name="first_event">一级事项：</string>
    <string name="second_event">二级事项</string>
    <string name="holiday_assignee">抄送人：</string>
    <string name="id">用户ID：</string>
    <string name="nickname">昵称：</string>
    <string name="email">邮箱：</string>
    <string name="role">角色：</string>
    <string name="department">部门：</string>
    <string name="department_code">部门编码：</string>

</resources>