<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/no_desc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/campus_assistance"/>

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/user"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/username"
        android:autofillHints="username" />

    <EditText
        android:drawableStart="@drawable/password"
        android:id="@+id/edit_text_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:text="123456"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:letterSpacing="0.5"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:text="@string/login"/>


</LinearLayout>