<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarSize="20sp"
        android:textStyle="bold"
        android:text="@string/example" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_time" />
        <TextView
            android:id="@+id/test_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_example" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/finish_time" />
        <TextView
            android:id="@+id/test_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_example" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/assignee" />
        <TextView
            android:id="@+id/text_assignee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/duration" />
        <TextView
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_example" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/comment_type"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/example" />
        <ListView
            android:id="@+id/comment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@color/ps_color_transparent"
            android:divider="@color/white"
            android:scrollbarSize="0dp"/>
    </LinearLayout>

</LinearLayout>