<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/back"
            android:contentDescription="@string/no_desc" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/process_detail"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/holiday_type" />
            <TextView
                android:id="@+id/text_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/holiday_reason" />
            <TextView
                android:id="@+id/text_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/holiday_time"/>
            <TextView
                android:id="@+id/text_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_example" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol2" />
            <TextView
                android:id="@+id/text_end_time_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_example" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/holiday_attachment" />

            <com.siyu.campus_assistance_frontend.custom.HttpImageView
                android:id="@+id/image_attachment"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:background="@drawable/image_border"
                android:contentDescription="@string/no_desc" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/holiday_initiator" />
            <TextView
                android:id="@+id/text_initiator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/holiday_create_time" />
            <TextView
                android:id="@+id/text_create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/holiday_department" />
            <TextView
                android:id="@+id/text_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_comment"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/comment" />
            <TextView
                android:id="@+id/text_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_destroy_time"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/holiday_destroy_time" />
            <TextView
                android:id="@+id/text_destroy_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">
            <TextView
                android:id="@+id/button_stage"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:text="@string/stage" />
            <TextView
                android:id="@+id/button_destroy"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@color/orange"
                android:text="@string/holiday_destroy" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/button_report"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:background="@color/orange"
                    android:text="@string/report" />
                <TextView
                    android:id="@+id/button_agree"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:background="@color/green"
                    android:text="@string/agree" />
                <TextView
                    android:id="@+id/button_reject"
                    android:layout_marginTop="10dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:background="@color/red"
                    android:text="@string/reject" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>