<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/back"
            android:contentDescription="@string/no_desc" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/add_holiday"/>
    </RelativeLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/holiday_type" />
            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/holiday_reason" />
            <EditText
                android:id="@+id/edit_text_reason"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:scrollbars="vertical"
                android:background="@android:drawable/edit_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/begin_time" />
            <TextView
                android:id="@+id/button_begin_time"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/please_choose" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/end_time" />
            <TextView
                android:id="@+id/button_end_time"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/please_choose" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/holiday_attachment" />

            <com.siyu.campus_assistance_frontend.custom.HttpImageView
                android:id="@+id/image_attachment"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:scaleType="centerCrop"
                android:background="@drawable/image_border"
                android:src="@drawable/upload"
                android:contentDescription="@string/no_desc" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/holiday_assignee" />
            <Spinner
                android:id="@+id/spinner_assignee"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/button_add"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:textSize="18sp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="@string/add"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</LinearLayout>